# inspection-hmi

./: CMakeLists.txt  README.md
cmake/: Proto.cmake
docs/: hmi_ui_design.md
src/: main.cpp
src/core/: CMakeLists.txt  GatewayClient.cpp  GatewayClient.h  Types.h
src/scene/: CMakeLists.txt  CadScene.cpp  CadScene.h  PointAnnotator.cpp  PointAnnotator.h  QVTKWidget.cpp  QVTKWidget.h
src/ui/: CMakeLists.txt  EditPanel.cpp  EditPanel.h  MainWindow.cpp  MainWindow.h  MonitorPanel.cpp  MonitorPanel.h  ProjectPanel.cpp  ProjectPanel.h  SceneViewport.cpp  SceneViewport.h  StatusBar.cpp  StatusBar.h  StatusLog.cpp  StatusLog.h  TopBar.cpp  TopBar.h
src/ui/operator/: ControlPanel.cpp  ControlPanel.h  NavMapWidget.cpp  NavMapWidget.h  NavPanel.h  OperatorWindow.cpp  OperatorWindow.h  ResultPanel.cpp  ResultPanel.h  RobotStatusPanel.h  RobotStatusWidget.cpp  RobotStatusWidget.h  TaskCard.h  TaskCardWidget.cpp  TaskCardWidget.h
src/util/: CMakeLists.txt  CoordTransform.h  HmiColors.h.in  HmiUtil.h
